--- a/sample/src/main/res/layout/example_awesome_text_view.xml
+++ b/sample/src/main/res/layout/example_awesome_text_view.xml
@@ -6,18 +6,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     >
 
-    <com.beardedhen.androidbootstrap.AwesomeTextView
-        style="@style/wrapping_fa_text"
-        app:bootstrapBrand="success"
-        app:bootstrapText="{ty_weather_cloudy}"
-        />
-
-    <com.beardedhen.androidbootstrap.AwesomeTextView
-        style="@style/wrapping_fa_text"
-        app:bootstrapBrand="danger"
-        app:typicon="ty_anchor"
-        />
-
     <TextView
         style="@style/description_label"
         android:text="Single icons"
@@ -154,6 +142,23 @@
         app:bootstrapBrand="primary"
         app:bootstrapText="Escaped \{fa_facebook\} icon"
         tools:ignore="SpUsage"
+        />
+
+    <TextView
+        style="@style/description_label"
+        android:text="Typicons"
+        />
+
+    <com.beardedhen.androidbootstrap.AwesomeTextView
+        style="@style/wrapping_fa_text"
+        app:bootstrapBrand="success"
+        app:bootstrapText="{ty_weather_cloudy}"
+        />
+
+    <com.beardedhen.androidbootstrap.AwesomeTextView
+        style="@style/wrapping_fa_text"
+        app:bootstrapBrand="danger"
+        app:typicon="ty_anchor"
         />
 
 </LinearLayout>
