--- a/sample/src/main/res/layout/example_bootstrap_circle_thumbnail.xml
+++ b/sample/src/main/res/layout/example_bootstrap_circle_thumbnail.xml
@@ -59,7 +59,6 @@
         app:borderWidth="0dp"
         />
 
-
     <TextView
         style="@style/description_label"
         android:text="Set using setImageBitmap()"
@@ -188,25 +187,25 @@
     <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/author_small"
+        android:src="@drawable/stars"
         />
 
     <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/author_small"
+        android:src="@drawable/daffodil_large"
         />
 
     <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
         android:layout_width="150dp"
         android:layout_height="75dp"
-        android:src="@drawable/author_small"
+        android:src="@drawable/small_daffodils"
         />
 
     <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:src="@drawable/author_small"
+        android:src="@drawable/caterpillar"
         />
 
 </LinearLayout>
