--- a/AndroidBootstrap/src/main/res/values/colors.xml
+++ b/AndroidBootstrap/src/main/res/values/colors.xml
@@ -1,64 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="white">#ffffffff</color>
-    <color name="black">#ff000000</color>
-    <color name="bbutton_edittext_border">#ccc</color>
-    <color name="bbutton_edittext_disabled">#ffe0e0e0</color>
-
-    <color name="bbutton_primary">#ff428bca</color>
-    <color name="bbutton_primary_edge">#ff357ebd</color>
-    <color name="bbutton_primary_pressed">#ff3276b1</color>
-    <color name="bbutton_primary_pressed_edge">#ff285e8e</color>
-    <color name="bbutton_primary_disabled">#a5428bca</color>
-    <color name="bbutton_primary_disabled_edge">#a5357ebd</color>
-
-    <color name="bbutton_danger">#ffd9534f</color>
-    <color name="bbutton_danger_edge">#ffd43f3a</color>
-    <color name="bbutton_danger_pressed">#ffd2322d</color>
-    <color name="bbutton_danger_pressed_edge">#ffac2925</color>
-    <color name="bbutton_danger_disabled">#a5d9534f</color>
-    <color name="bbutton_danger_disabled_edge">#a5d43f3a</color>
-
-    <color name="bbutton_success">#ff5cb85c</color>
-    <color name="bbutton_success_edge">#ff4cae4c</color>
-    <color name="bbutton_success_pressed">#ff47a447</color>
-    <color name="bbutton_success_pressed_edge">#ff398439</color>
-    <color name="bbutton_success_disabled">#a55cb85c</color>
-    <color name="bbutton_success_disabled_edge">#a54cae4c</color>
-
-    <color name="bbutton_warning">#fff0ad4e</color>
-    <color name="bbutton_warning_edge">#ffeea236</color>
-    <color name="bbutton_warning_pressed">#ffed9c28</color>
-    <color name="bbutton_warning_pressed_edge">#ffd58512</color>
-    <color name="bbutton_warning_disabled">#a5f0ad4e</color>
-    <color name="bbutton_warning_disabled_edge">#a5eea236</color>
-
-    <color name="bbutton_info">#ff5bc0de</color>
-    <color name="bbutton_info_edge">#ff46b8da</color>
-    <color name="bbutton_info_pressed">#ff39b3d7</color>
-    <color name="bbutton_info_pressed_edge">#ff269abc</color>
-    <color name="bbutton_info_disabled">#a55bc0de</color>
-    <color name="bbutton_info_disabled_edge">#a546b8da</color>
-
-    <color name="bbutton_default">#ffffffff</color>
-    <color name="bbutton_default_edge">#ffcccccc</color>
-    <color name="bbutton_default_pressed">#ffebebeb</color>
-    <color name="bbutton_default_pressed_edge">#ffadadad</color>
-    <color name="bbutton_default_disabled">#a5ffffff</color>
-    <color name="bbutton_default_disabled_edge">#a5cccccc</color>
-
-    <color name="bbutton_inverse">#ff0a0a0a</color>
-    <color name="bbutton_inverse_edge">#ff141414</color>
-    <color name="bbutton_inverse_pressed">#ff1f1f1f</color>
-    <color name="bbutton_inverse_pressed_edge">#ff292929</color>
-    <color name="bbutton_inverse_disabled">#a50a0a0a</color>
-    <color name="bbutton_inverse_disabled_edge">#a5141414</color>
-
-    <color name="bthumbnail_background">#ffffffff</color>
-    <color name="bthumbnail_placeholder">#e9e9e9</color>
-    <color name="bthumbnail_border">#dbdbdb</color>
-    <color name="bthumbnail_font">#7e7e7e</color>
-
 
     <!-- Bootstrap Brand Colors (Universal) -->
 
@@ -76,61 +17,45 @@
     <color name="bootstrap_brand_warning">#f0ad4e</color>
     <color name="bootstrap_brand_danger">#d9534f</color>
 
-
-
     <!-- Buttons -->
+    <color name="bootstrap_brand_secondary_fill">#ffffff</color>
+    <color name="bootstrap_brand_secondary_border">#cccccc</color>
+    <color name="bootstrap_brand_secondary_text">#373a3c</color>
 
-    <!-- Primary -->
-    <color name="bootstrap_btn_primary_text">#fff</color>
-    <color name="bootstrap_btn_primary_fill_default">#0275d8</color>
-    <color name="bootstrap_btn_primary_edge_default">#01549b</color>
-    <color name="bootstrap_btn_primary_fill_active">#025aa5</color>
-    <color name="bootstrap_btn_primary_edge_active">#01549b</color>
-
-    <!-- Secondary -->
-    <color name="bootstrap_btn_secondary_text">#373a3c</color>
-    <color name="bootstrap_btn_secondary_fill_default">#fff</color>
-    <color name="bootstrap_btn_secondary_edge_default">#ccc</color>
-    <color name="bootstrap_btn_secondary_fill_active">#e6e6e6</color>
-    <color name="bootstrap_btn_secondary_edge_active">#adadad</color>
-
-    <!-- Success -->
-    <color name="bootstrap_btn_success_text">#fff</color>
-    <color name="bootstrap_btn_success_fill_default">#5cb85c</color>
-    <color name="bootstrap_btn_success_edge_default">#5cb85c</color>
-    <color name="bootstrap_btn_success_fill_active">#449d44</color>
-    <color name="bootstrap_btn_success_edge_active">#419641</color>
-
-    <!-- Warning -->
-    <color name="bootstrap_btn_warning_text">#fff</color>
-    <color name="bootstrap_btn_warning_fill_default">#f0ad4e</color>
-    <color name="bootstrap_btn_warning_edge_default">#f0ad4e</color>
-    <color name="bootstrap_btn_warning_fill_active">#ec971f</color>
-    <color name="bootstrap_btn_warning_edge_active">#eb9316</color>
-
-    <!-- Danger -->
-    <color name="bootstrap_btn_danger_text">#fff</color>
-    <color name="bootstrap_btn_danger_fill_default">#d9534f</color>
-    <color name="bootstrap_btn_danger_edge_default">#d9534f</color>
-    <color name="bootstrap_btn_danger_fill_active">#c9302c</color>
-    <color name="bootstrap_btn_danger_edge_active">#c12e2a</color>
-
-    <!-- Link -->
-    <color name="bootstrap_btn_link_text">#014c8c</color>
-    <color name="bootstrap_btn_link_fill_default">#00000000</color>
-    <color name="bootstrap_btn_link_edge_default">#00000000</color>
-    <color name="bootstrap_btn_link_fill_active">#00000000</color>
-    <color name="bootstrap_btn_link_edge_active">#00000000</color>
+    <!-- TODO legacy colors -->
 
 
-    <!-- Labels -->
+    <color name="white">#ffffffff</color>
+    <color name="black">#ff000000</color>
+    <color name="bbutton_edittext_border">#ccc</color>
+    <color name="bbutton_edittext_disabled">#ffe0e0e0</color>
+
+    <color name="bbutton_primary">#ff428bca</color>
+    <color name="bbutton_primary_edge">#ff357ebd</color>
 
 
-    <color name="bootstrap_lbl_default_fill">#818a91</color>
-    <color name="bootstrap_lbl_primary_fill">#0275d8</color>
-    <color name="bootstrap_lbl_success_fill">#5cb85c</color>
-    <color name="bootstrap_lbl_info_fill">#5bc0de</color>
-    <color name="bootstrap_lbl_warning_fill">#f0ad4e</color>
-    <color name="bootstrap_lbl_danger_fill">#d9534f</color>
+    <color name="bbutton_danger">#ffd9534f</color>
+    <color name="bbutton_danger_edge">#ffd43f3a</color>
+
+    <color name="bbutton_success">#ff5cb85c</color>
+    <color name="bbutton_success_edge">#ff4cae4c</color>
+
+    <color name="bbutton_warning">#fff0ad4e</color>
+    <color name="bbutton_warning_edge">#ffeea236</color>
+
+    <color name="bbutton_info">#ff5bc0de</color>
+    <color name="bbutton_info_edge">#ff46b8da</color>
+
+    <color name="bbutton_default">#ffffffff</color>
+    <color name="bbutton_default_edge">#ffcccccc</color>
+    <color name="bbutton_default_pressed">#ffebebeb</color>
+    <color name="bbutton_default_pressed_edge">#ffadadad</color>
+    <color name="bbutton_default_disabled">#a5ffffff</color>
+    <color name="bbutton_default_disabled_edge">#a5cccccc</color>
+
+    <color name="bthumbnail_background">#ffffffff</color>
+    <color name="bthumbnail_placeholder">#e9e9e9</color>
+    <color name="bthumbnail_border">#dbdbdb</color>
+    <color name="bthumbnail_font">#7e7e7e</color>
 
 </resources>
