--- a/sample/src/main/res/layout/example_bootstrap_edit_text_view.xml
+++ b/sample/src/main/res/layout/example_bootstrap_edit_text_view.xml
@@ -5,23 +5,86 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
-    <TextView
-        style="@style/description_label"
-        android:text="Default Edit Text"
-        />
-
-    <com.beardedhen.androidbootstrap.BootstrapEditText
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        app:bootstrapBrand="primary"
-        app:roundedCorners="true"
-        />
+        android:layout_marginBottom="4dp"
+        android:layout_marginTop="4dp"
+        android:orientation="horizontal"
+        >
 
-    <com.beardedhen.androidbootstrap.BootstrapEditText
+        <Button
+            android:id="@+id/bedit_text_change_theme_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Change Theme"
+            />
+
+        <com.beardedhen.androidbootstrap.BootstrapEditText
+            android:id="@+id/bedit_text_change_theme"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            app:bootstrapBrand="primary"
+            />
+    </LinearLayout>
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:bootstrapBrand="success"
-        />
+        android:layout_marginBottom="4dp"
+        android:layout_marginTop="4dp"
+        android:orientation="horizontal"
+        >
+
+        <Button
+            android:id="@+id/bedit_text_change_round_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Change Rounded"
+            />
+
+        <com.beardedhen.androidbootstrap.BootstrapEditText
+            android:id="@+id/bedit_text_change_round"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            app:bootstrapBrand="success"
+            app:roundedCorners="true"
+
+            />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:layout_marginTop="4dp"
+        android:orientation="horizontal"
+        >
+
+        <Button
+            android:id="@+id/bedit_text_change_enabled_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:text="Change Enabled"
+            />
+
+        <com.beardedhen.androidbootstrap.BootstrapEditText
+            android:id="@+id/bedit_text_change_enabled"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="2"
+            android:hint="Enter Password"
+            app:bootstrapBrand="danger"
+            />
+    </LinearLayout>
 
 </LinearLayout>
