--- a/AndroidBootstrap/src/main/res/values/dimens.xml
+++ b/AndroidBootstrap/src/main/res/values/dimens.xml
@@ -61,6 +61,7 @@
 
     <dimen name="bootstrap_edit_text_corner_radius">6dp</dimen>
     <dimen name="bootstrap_edit_text_stroke_default">1.5dp</dimen>
+    <dimen name="bootstrap_circle_default_border">3dp</dimen>
 
 
 </resources>
