--- a/AndroidBootstrap/src/main/res/values/attrs.xml
+++ b/AndroidBootstrap/src/main/res/values/attrs.xml
@@ -39,8 +39,7 @@
     <attr name="roundedCorners" format="boolean"/>
     <attr name="toggleable" format="boolean"/>
     <attr name="placeholderText" format="string"/>
-    <attr name="borderWidth" format="dimension"/>
-    <attr name="borderColor" format="color"/>
+    <attr name="hasBorder" format="boolean"/>
 
     <!-- View attributes -->
 
@@ -83,16 +82,14 @@
     </declare-styleable>
 
     <declare-styleable name="BootstrapCircleThumbnail">
-        <attr name="borderWidth"/>
-        <attr name="borderColor"/>
         <attr name="bootstrapBrand"/>
+        <attr name="hasBorder"/>
     </declare-styleable>
 
     <declare-styleable name="BootstrapThumbnail">
-        <attr name="borderWidth"/>
-        <attr name="borderColor"/>
         <attr name="bootstrapBrand"/>
         <attr name="roundedCorners"/>
+        <attr name="hasBorder"/>
     </declare-styleable>
 
     <declare-styleable name="BootstrapEditText">
