--- a/sample/src/main/res/layout/example_bootstrap_edit_text_view.xml
+++ b/sample/src/main/res/layout/example_bootstrap_edit_text_view.xml
@@ -87,4 +87,32 @@
             />
     </LinearLayout>
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:layout_marginTop="4dp"
+        android:orientation="horizontal"
+        >
+
+        <Button
+            android:id="@+id/bedit_text_change_size_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Change Size"
+            />
+
+        <com.beardedhen.androidbootstrap.BootstrapEditText
+            android:id="@+id/bedit_text_change_size"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            app:bootstrapSize="md"
+            app:bootstrapBrand="info"
+            />
+    </LinearLayout>
+
+
 </LinearLayout>
